--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.1",
     "react-scroll": "^1.9.0",
+    "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
