--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aos": "^2.3.4",
     "axios": "^1.7.7",
     "flowbite-react": "^0.10.1",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "modal": "^1.2.0",
     "react": "^18.3.1",
