--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "@react-google-maps/api": "^2.19.3",
     "aos": "^2.3.4",
     "axios": "^1.7.7",
@@ -24,6 +25,7 @@
     "moment-timezone": "^0.5.46",
     "react": "^18.3.1",
     "react-big-calendar": "^1.15.0",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.53.0",
