--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "@react-google-maps/api": "^2.19.3",
+    "@types/react-big-calendar": "^1.8.12",
     "aos": "^2.3.4",
     "axios": "^1.7.7",
     "flowbite-react": "^0.10.1",
