--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "@react-google-maps/api": "^2.19.3",
+    "@types/js-cookie": "^3.0.6",
     "@types/react-big-calendar": "^1.8.12",
     "aos": "^2.3.4",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "flowbite-react": "^0.10.1",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "modal": "^1.2.0",
@@ -27,6 +30,7 @@
     "react": "^18.3.1",
     "react-big-calendar": "^1.15.0",
     "react-calendar": "^5.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.53.0",
