Chore/ solving orders  problem

--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "@react-google-maps/api": "^2.19.3",
+    "@types/aos": "^3.0.7",
     "@types/js-cookie": "^3.0.6",
     "@types/react-big-calendar": "^1.8.12",
+    "@types/react-google-recaptcha": "^2.1.9",
     "aos": "^2.3.4",
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
