--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-google-maps/api": "^2.19.3",
     "@types/aos": "^3.0.7",
     "@types/js-cookie": "^3.0.6",
+    "@types/leaflet": "^1.9.14",
     "@types/react-big-calendar": "^1.8.12",
     "@types/react-google-recaptcha": "^2.1.9",
     "aos": "^2.3.4",
