--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
     "flowbite-react": "^0.10.1",
+    "framer-motion": "^11.11.17",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
