--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
     "flowbite-react": "^0.10.1",
+    "framer-motion": "^12.4.7",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
@@ -42,6 +43,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.1",
     "react-scroll": "^1.9.0",
+    "react-select": "^5.10.0",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5"
   },
