--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
+    "react-masonry-css": "^1.0.16",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.1",
     "react-scroll": "^1.9.0",
