--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "@heroicons/react": "^2.2.0",
     "@react-google-maps/api": "^2.19.3",
     "@types/aos": "^3.0.7",
     "@types/js-cookie": "^3.0.6",
@@ -53,6 +54,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@types/cypress": "^1.1.6",
+    "@types/node": "^22.15.11",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-modal": "^3.16.3",
