--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "react-scroll": "^1.9.0",
     "react-select": "^5.10.0",
     "react-spinners": "^0.14.1",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
